--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 24 hours
-    - cron: "* */168 * * *"
+  schedule: # “At 12:00 on Monday.”
+    - cron: "0 12 * * 1"
   workflow_dispatch:
 
 jobs:
